<resources>
    <string name="app_name">Popular Movies</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_label">Title</string>
    <string name="vote_average_label">Vote Average</string>
    <string name="popularity_label">Popularity</string>
    <string name="overview_label">Overview</string>
    <string name="release_date_label">Release Date</string>
    <string name="adult_label">Adult</string>
    <string name="detail_error_message">data not available</string>
    <string name="most_popular">Most Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="check_network">Please check your network</string>
    <string name="server_unavailable">Server is currently unavailable. Please try again later</string>
    <string name="data_unavailable">Data unavailable</string>

    <string name="pref_sort_order_label" translatable="false">SORTORDER</string>
    <string name="pref_sort_order_key" translatable="false">SORTORDER</string>
    <string name="pref_sort_order_default" translatable="false">mostpopular</string>
    <string name="pref_current_position__label" translatable="false">POSITION</string>
    <string name="pref_current_position_key" translatable="false">POSITION</string>
    <string name="pref_current_position_default" translatable="false">0</string>
    <string name="mark_it_as_a_favorite">MARK AS\n FAVORITE</string>
    <string name="unmark_it_as_a_favorite">UNMARK AS\n FAVORITE</string>
    <string name="my_favorite"> My Favorite movies</string>
    <string name="no_favorite"> You have not marked any favorite movies yet !!!</string>
    <string name="reviews">Reviews</string>
    <string name="trailers">Trailers</string>
    <string name="load">Please wait, loading in progress ...</string>
    <string name="detail">TRAILER</string>
    <string name="action_share">Share</string>

</resources>
